--- a/friends/src/index.css
+++ b/friends/src/index.css
@@ -2,4 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: url('https://raw.githubusercontent.com/jaspindersingh83/Sprint-Challenge---React/master/starwars/src/sw-bg.jpg');
+  background-size: cover;
+  /* background-repeat: no-repeat; */
 }
